Updated Process Correlation Notebook

--- a/notebooks/1.0 Example - Correlate MS and LV parameters to CXAS spectra.ipynb
+++ b/notebooks/1.0 Example - Correlate MS and LV parameters to CXAS spectra.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "72f45503",
+   "id": "06d1bbff",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2683f0df",
+   "id": "a45080b7",
    "metadata": {},
    "source": [
     "# 1. Define where Data is Stored"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0586ab8c",
+   "id": "bee7535d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9a68011",
+   "id": "55414332",
    "metadata": {},
    "source": [
     "# 2. Define BL Data Structure"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "12f59dc4",
+   "id": "754337ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4cc2b8d",
+   "id": "2c2b4d69",
    "metadata": {},
    "source": [
     "#  3. Extract Timestamps of BL data"
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fb9d742a",
+   "id": "1e2496c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e3d1cf70",
+   "id": "923f9eb5",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "206fb882",
+   "id": "c2d7ff20",
    "metadata": {},
    "source": [
     "# 4. Import MS and LV data"
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3430b609",
+   "id": "4a2bb6cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00c5cb26",
+   "id": "eeaceca4",
    "metadata": {},
    "source": [
     "# 5. Interpolate MS and LV data onto CXAS timestamps"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "13fba1e9",
+   "id": "62bf39e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3dc1062",
+   "id": "2cd92f83",
    "metadata": {},
    "source": [
     "# 6. Concatenate BL Filenames with MS and LV data"
@@ -681,8 +681,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2e91b07b",
+   "execution_count": 8,
+   "id": "7442d5ca",
    "metadata": {},
    "outputs": [
     {
@@ -2334,7 +2334,7 @@
        "[50 rows x 74 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2345,9 +2345,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "530bce76",
+   "metadata": {},
+   "source": [
+    "# 7. Save Dataframe to CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5dc95bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Modify paths inside the '' ###\n",
+    "\n",
+    "# Folder where to save file\n",
+    "result_dir = r'C:\\Users\\ashoff\\OneDrive - SLAC National Accelerator Laboratory\\Co-ACCESS Shared Folder\\Python Scripts and GUIs\\Example Data 1 - SnO2 Reduction\\Results'\n",
+    "\n",
+    "# Name of file\n",
+    "result_fname = 'SnO2_Spectra_Process_Correlation'\n",
+    "\n",
+    "# Header formats\n",
+    "index_label = 'Clock Time' #None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "354ae8d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process_params.to_csv(os.path.join(result_dir, result_fname + '.csv'), sep=',', \n",
+    "                      na_rep='', header=True, index=True, index_label=index_label)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "febaaeac",
+   "id": "1228f8c2",
    "metadata": {},
    "outputs": [],
    "source": []
