Updated Notebook example to save data

--- a/notebooks/3.0 Example - Bulk Import Data-CalcMu-Calibrate-Normalize-PlotXANES-ExportXANES.ipynb
+++ b/notebooks/3.0 Example - Bulk Import Data-CalcMu-Calibrate-Normalize-PlotXANES-ExportXANES.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "267653b1",
+   "id": "2b0185bf",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9e606ce",
+   "id": "c0f127b6",
    "metadata": {},
    "source": [
     "# 1. Define where Data is Stored"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "829c8039",
+   "id": "8b573049",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6024cbe2",
+   "id": "1ef8f29b",
    "metadata": {},
    "source": [
     "# 2. Define BL Data Structure"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "80059dff",
+   "id": "c7e4c8d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c096db43",
+   "id": "70608a15",
    "metadata": {},
    "source": [
     "# 3. Create Experiment Class and Import  Data\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e0d14b9f",
+   "id": "35fefb1b",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a92266ba",
+   "id": "b0e172f2",
    "metadata": {},
    "source": [
     "## 3b. Add BL Data"
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8f913d5d",
+   "id": "c8a406e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c0e824e4",
+   "id": "adec5480",
    "metadata": {
     "scrolled": true
    },
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fbfe56f0",
+   "id": "36510235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6457fef0",
+   "id": "85a98e2f",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "43d4912e",
+   "id": "843f7aec",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4bcaf22e",
+   "id": "7bc9dd87",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a143f9f",
+   "id": "038a85d7",
    "metadata": {},
    "source": [
     "# 4. Calcualte Absorption Spectra [Sample and/or Reference]"
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "52740a3d",
+   "id": "1094c130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,16 +343,16 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d0cda1d1",
+   "id": "40c2acea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Group 0x227abbcf910<table><tr><td><b>Attribute</b></td><td><b>Type</b></td></tr><tr><td>energy</td><td><i>ndarray</i></td></tr><tr><td>mu</td><td><i>ndarray</i></td></tr></table>"
+       "Group 0x1b8ef2437f0<table><tr><td><b>Attribute</b></td><td><b>Type</b></td></tr><tr><td>energy</td><td><i>ndarray</i></td></tr><tr><td>mu</td><td><i>ndarray</i></td></tr></table>"
       ],
       "text/plain": [
-       "<Group 0x227abbcf910>"
+       "<Group 0x1b8ef2437f0>"
       ]
      },
      "execution_count": 12,
@@ -368,16 +368,16 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "37873e29",
+   "id": "ba64da8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Group 0x227a3ec4e50<table><tr><td><b>Attribute</b></td><td><b>Type</b></td></tr><tr><td>energy</td><td><i>ndarray</i></td></tr><tr><td>mu</td><td><i>ndarray</i></td></tr></table>"
+       "Group 0x1b8ef243610<table><tr><td><b>Attribute</b></td><td><b>Type</b></td></tr><tr><td>energy</td><td><i>ndarray</i></td></tr><tr><td>mu</td><td><i>ndarray</i></td></tr></table>"
       ],
       "text/plain": [
-       "<Group 0x227a3ec4e50>"
+       "<Group 0x1b8ef243610>"
       ]
      },
      "execution_count": 13,
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d6da19e2",
+   "id": "14603aef",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85dd37e2",
+   "id": "3934251b",
    "metadata": {},
    "source": [
     "# 5. Calibrate Spectra\n",
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3dd40044",
+   "id": "831225c1",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1940aa61",
+   "id": "f67d91da",
    "metadata": {},
    "source": [
     "## 5b. Calculate Sample E0"
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b340164e",
+   "id": "b9c909f7",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "56be2984",
+   "id": "a56b6fd3",
    "metadata": {},
    "outputs": [
     {
@@ -573,16 +573,16 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6b56379e",
+   "id": "429a801a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Group 0x227abbcf910<table><tr><td><b>Attribute</b></td><td><b>Type</b></td></tr><tr><td>energy</td><td><i>ndarray</i></td></tr><tr><td>mu</td><td><i>ndarray</i></td></tr><tr><td>del_E</td><td><i>float64</i></td></tr><tr><td>e0</td><td><i>float64</i></td></tr></table>"
+       "Group 0x1b8ef2437f0<table><tr><td><b>Attribute</b></td><td><b>Type</b></td></tr><tr><td>energy</td><td><i>ndarray</i></td></tr><tr><td>mu</td><td><i>ndarray</i></td></tr><tr><td>del_E</td><td><i>float64</i></td></tr><tr><td>e0</td><td><i>float64</i></td></tr></table>"
       ],
       "text/plain": [
-       "<Group 0x227abbcf910>"
+       "<Group 0x1b8ef2437f0>"
       ]
      },
      "execution_count": 18,
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01455ad5",
+   "id": "24ddcde7",
    "metadata": {},
    "source": [
     "# 6. Normalize Spectra\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "83d107f4",
+   "id": "e3cb06e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28142290",
+   "id": "ea204061",
    "metadata": {},
    "source": [
     "## 6b. Store normalization parameters into each spectrum"
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9c289ed4",
+   "id": "c415b283",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba1d9749",
+   "id": "e2e6ecfc",
    "metadata": {},
    "source": [
     "## 6c. Normalize and visualize spectra"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "52770031",
+   "id": "779d4c80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fcc808e5",
+   "id": "46fff5bc",
    "metadata": {},
    "outputs": [
     {
@@ -703,16 +703,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "447ada4d",
+   "id": "3e7289c3",
    "metadata": {},
    "source": [
-    "# Determining how to interpolate XAS Structure"
+    "# 7. Interpolation of XANES Spectra\n",
+    "## 7a. Determining how to interpolate XAS Structure"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "71d50bde",
+   "id": "411246bd",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a2bff97f",
+   "id": "512bf105",
    "metadata": {
     "scrolled": true
    },
@@ -1333,13 +1334,38 @@
     }
    ],
    "source": [
+    "# Visualize parameters for each spectra\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ae51773",
+   "metadata": {},
+   "source": [
+    "## 7b. Interpolate XANES Spectra onto defined grid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "21ee281e",
+   "id": "e18f0e42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the energy range and step size to interpolate onto\n",
+    "start = 29050\n",
+    "stop = 29450\n",
+    "step = 0.25\n",
+    "\n",
+    "# Interpolate Spectra\n",
+    "result = my_exp.interpolate_spectra(start, stop, step, x_axis = 'energy', sample = 'mu Sample')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "51c74ba3",
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1374,7 @@
        "<AxesSubplot:xlabel='energy'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1366,21 +1392,14 @@
     }
    ],
    "source": [
-    "# Set the energy range to interpolate onto\n",
-    "start = 29050\n",
-    "stop = 29450\n",
-    "step = 0.25\n",
-    "\n",
-    "# Interpolate Spectra\n",
-    "result = my_exp.interpolate_spectra(start, stop, step, x_axis = 'energy', sample = 'mu Sample')\n",
-    "\n",
+    "# Visualzie Interpolated Spectra\n",
     "result.plot(legend=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8a764269",
+   "execution_count": 27,
+   "id": "f531d222",
    "metadata": {},
    "outputs": [
     {
@@ -1823,37 +1842,46 @@
        "[1601 rows x 50 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Inspect DataFrame containing interpoalted spectra\n",
     "result"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "d93b3a7e",
+   "cell_type": "markdown",
+   "id": "e4dcab33",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-27-0217899e29d0>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-27-0217899e29d0>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    define params here\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "def calculate_Chi_Spectra(self, spectra_name):\n",
-    "    for key in self.spectra.keys():\n",
-    "        define params here\n",
-    "    \n",
-    "        larch.xafs.autobkg(....)"
+    "## 7c. Save the dataframe to a csv file "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "066beb31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define path and filename to save Normalized XANES:\n",
+    "output_dir = r'C:\\Users\\ashoff\\OneDrive - SLAC National Accelerator Laboratory\\Co-ACCESS Shared Folder\\Python Scripts and GUIs\\Example Data 1 - SnO2 Reduction'\n",
+    "result_name = 'NormXANES'\n",
+    "\n",
+    "# Save Normalized XANES:\n",
+    "result.to_csv(os.path.join(output_dir,result_name + '.csv'), sep=',', header=True, index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2b9f093",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
