include *kwargs in notebooks

--- a/notebooks/4.0 Example - QXAS Data Manipulation and Interpolated Spectra Export.ipynb
+++ b/notebooks/4.0 Example - QXAS Data Manipulation and Interpolated Spectra Export.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "5f903eb7",
+   "execution_count": 1,
+   "id": "bec3437f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No conda env active, defaulting to base\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import time\n",
@@ -31,8 +39,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7eaff028",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([])"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "d36fffcd",
+   "id": "4e167f59",
    "metadata": {},
    "source": [
     "# 1. Define where Data is Stored"
@@ -41,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8c44a891",
+   "id": "622d229c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb980d52",
+   "id": "f8601d1c",
    "metadata": {},
    "source": [
     "# 2. Define BL Data Structure"
@@ -68,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a45882d8",
+   "id": "456af80b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5631499e",
+   "id": "8246247b",
    "metadata": {},
    "source": [
     "# 3. Create Experiment Class and Import  Data\n",
@@ -107,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "38b120ea",
+   "id": "9947fd7c",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd1da52b",
+   "id": "2cb963cc",
    "metadata": {},
    "source": [
     "## 3b. Add BL Data"
@@ -140,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7f5edb14",
+   "id": "7e032ebb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "db0a95ff",
+   "id": "4c671d8f",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "df9c506c",
+   "id": "5f832e41",
    "metadata": {
     "scrolled": true
    },
@@ -1194,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c5f1b6d8",
+   "id": "8bc49d77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f01c5e44",
+   "id": "62ffefc1",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "510a1efc",
+   "id": "78d79a8f",
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11032905",
+   "id": "c773da68",
    "metadata": {},
    "source": [
     "# Development Block to Adding QXAS Timing Signal\n",
@@ -1283,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "e76669d2",
+   "id": "e729823f",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "5c029e73",
+   "id": "823eb19f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "75c89302",
+   "id": "01f41762",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "7cdcc94c",
+   "id": "8d29538f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "14bbc2c0",
+   "id": "f1b1bae0",
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1826,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "4fb5d9d5",
+   "id": "51ed064d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1811,7 +1840,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "a8687267",
+   "id": "d812bb07",
    "metadata": {},
    "outputs": [
     {
@@ -3738,7 +3767,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "9b1b600a",
+   "id": "f509b60a",
    "metadata": {},
    "outputs": [
     {
@@ -3773,7 +3802,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "7a9cc47c",
+   "id": "80af299e",
    "metadata": {},
    "outputs": [
     {
@@ -3793,7 +3822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8c19b04",
+   "id": "f0ae2a78",
    "metadata": {},
    "source": [
     "# End Timing Development Block"
@@ -3802,14 +3831,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74f8abf7",
+   "id": "34ec5f5a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "185dbb78",
+   "id": "4791f510",
    "metadata": {},
    "source": [
     "# Development Block to Remove short spectra from QXAS Data\n",
@@ -3822,7 +3851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04dc7bf8",
+   "id": "bc91f5c0",
    "metadata": {
     "scrolled": true
    },
@@ -3835,7 +3864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19b5eed5",
+   "id": "8964f677",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3848,7 +3877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b4c5c4f",
+   "id": "a47d6114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3858,7 +3887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "278c24b5",
+   "id": "740e431f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3872,7 +3901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f9a2637",
+   "id": "91c592a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3886,7 +3915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f4e5e4",
+   "id": "42faf33b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3896,7 +3925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7efec3a",
+   "id": "811fa5ef",
    "metadata": {},
    "source": [
     "## 3c. Add Process Parameter Data \n",
@@ -3907,7 +3936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55b40635",
+   "id": "4b71db65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3924,7 +3953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d7d0adc",
+   "id": "38df8f2e",
    "metadata": {
     "scrolled": true
    },
@@ -3937,7 +3966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66afd419",
+   "id": "551b0f6a",
    "metadata": {
     "scrolled": true
    },
@@ -3949,7 +3978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c59a67a0",
+   "id": "ff18b69e",
    "metadata": {},
    "source": [
     "# 4. Correlate Process Paramters to X-ray Spectra Timestamps\n",
@@ -3962,7 +3991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5781fd9",
+   "id": "57510ed3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3975,7 +4004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccb43173",
+   "id": "dd87564f",
    "metadata": {},
    "source": [
     "## 4b. Save Correlation Table"
@@ -3984,7 +4013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e64a854",
+   "id": "76403665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3999,7 +4028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65023cfc",
+   "id": "1970f3c8",
    "metadata": {},
    "source": [
     "# 5. Calcualte Absorption Spectra [Sample and/or Reference]"
@@ -4008,7 +4037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c27e9b56",
+   "id": "d07ea684",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4019,7 +4048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c913dada",
+   "id": "ab018185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4030,7 +4059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acb3a1a6",
+   "id": "e0c65598",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4041,7 +4070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ec91bbd",
+   "id": "fec9ca31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4051,7 +4080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8023891f",
+   "id": "fe568b37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4067,7 +4096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c69572fe",
+   "id": "3a53a9fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4076,7 +4105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19a764d4",
+   "id": "95983a75",
    "metadata": {},
    "source": [
     "# 6. Calibrate Spectra\n",
@@ -4086,7 +4115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "139bb60d",
+   "id": "57a0d875",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4099,7 +4128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a44a49f0",
+   "id": "9430e133",
    "metadata": {},
    "source": [
     "## 6b. Calculate Sample E0"
@@ -4108,7 +4137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e431a85f",
+   "id": "52049172",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4120,7 +4149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d0f712",
+   "id": "46abb82f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4130,7 +4159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1942f46d",
+   "id": "8a025bb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4139,7 +4168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bd50e85",
+   "id": "1d0b5591",
    "metadata": {},
    "source": [
     "# 7. Normalize Spectra\n",
@@ -4149,7 +4178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b03bf31",
+   "id": "85a61b99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4162,7 +4191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45d03124",
+   "id": "5ebba2b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4177,7 +4206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "490d3aa5",
+   "id": "5bd3bf6f",
    "metadata": {},
    "source": [
     "## 7b. Store normalization parameters into each spectrum"
@@ -4186,7 +4215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b32c57f4",
+   "id": "0f8154a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4202,7 +4231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef52285e",
+   "id": "47bcd724",
    "metadata": {},
    "source": [
     "## 7c. Normalize and visualize spectra"
@@ -4211,7 +4240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f5b725f",
+   "id": "7b12bfd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4223,7 +4252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8266478e",
+   "id": "13006e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4234,7 +4263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62aebe0d",
+   "id": "c6c44ea9",
    "metadata": {},
    "source": [
     "# 8. Interpolation of XANES Spectra\n",
@@ -4244,7 +4273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beb5ecba",
+   "id": "317930af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4254,7 +4283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b134f66",
+   "id": "8373c1b7",
    "metadata": {
     "scrolled": true
    },
@@ -4266,7 +4295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "def0a39b",
+   "id": "89277942",
    "metadata": {},
    "source": [
     "## 8b. Interpolate XANES Spectra onto defined grid\n",
@@ -4278,7 +4307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ebb0222",
+   "id": "536f6388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4294,7 +4323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd773552",
+   "id": "32865aa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4305,7 +4334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "961fb3ac",
+   "id": "25570e0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4315,7 +4344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db29b10c",
+   "id": "d8e73207",
    "metadata": {},
    "source": [
     "## 8c. Save the dataframe to a csv file "
@@ -4324,7 +4353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "810feb73",
+   "id": "74356d20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4338,7 +4367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66ec2d5a",
+   "id": "953c06e4",
    "metadata": {},
    "source": [
     "# 9. Linear Combination Fitting\n",
@@ -4348,7 +4377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "195de701",
+   "id": "d973feec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4369,7 +4398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85c6f086",
+   "id": "ea8104e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4380,7 +4409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "812533d4",
+   "id": "e937f186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4397,7 +4426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "238bf514",
+   "id": "1866ef20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4411,7 +4440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d79386ca",
+   "id": "dc988bff",
    "metadata": {
     "scrolled": true
    },
@@ -4425,7 +4454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66fbb08b",
+   "id": "45b0150d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4438,7 +4467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51b648f9",
+   "id": "cb32a1ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4448,7 +4477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f05e2e8c",
+   "id": "fa5acd1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4487,7 +4516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9556ed1",
+   "id": "a9da21ce",
    "metadata": {},
    "source": [
     "## 9b. LCF using First/intermediate1/Intmerdiate2/Last\n",
@@ -4497,7 +4526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dd1ee56",
+   "id": "ee904b98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4521,7 +4550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8445b8b",
+   "id": "19d5e52e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4531,7 +4560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9291df6d",
+   "id": "72b42b10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4548,7 +4577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef60b6ab",
+   "id": "657dd0f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4562,7 +4591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187c6eb7",
+   "id": "401fd6e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4574,7 +4603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d24e864",
+   "id": "8caefd49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4587,7 +4616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff6046b",
+   "id": "6b3d0205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4597,7 +4626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64054ddf",
+   "id": "a992fd33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4636,7 +4665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe6eda3f",
+   "id": "2f31d5a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4647,7 +4676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d56032ea",
+   "id": "e728334c",
    "metadata": {},
    "outputs": [],
    "source": []
