Update 2.0 Example - Experiment Class -  XAS Data Processing.ipynb

--- a/notebooks/2.0 Example - Experiment Class -  XAS Data Processing.ipynb
+++ b/notebooks/2.0 Example - Experiment Class -  XAS Data Processing.ipynb
@@ -454,7 +454,8 @@
     "energy_range = 20\n",
     "use_mean = True\n",
     "\n",
-    "my_exp.calibrate_reference_spectra(Ref_E0, energy_range=20, use_mean = use_mean)"
+    "my_exp.calibrate_reference_spectra(Ref_E0, energy_range=20, use_mean = use_mean, \n",
+    "                                   data_filtering = True, plot_filtering = True, window_length = 5, polyorder = 2)"
    ]
   },
   {
@@ -481,7 +482,8 @@
     "energy_range = 20\n",
     "use_mean = True\n",
     "\n",
-    "my_exp.find_sample_e0(Samp_E0, energy_range = energy_range, use_mean = use_mean)"
+    "my_exp.find_sample_e0(Samp_E0, energy_range = energy_range, use_mean = use_mean,\n",
+    "                     data_filtering = True, plot_filtering = True, window_length = 5, polyorder = 2)"
    ]
   },
   {
