inline plotting update

--- a/notebooks/2.2 Example - Experiment Class -  XAS-Process Stream Correlation.ipynb
+++ b/notebooks/2.2 Example - Experiment Class -  XAS-Process Stream Correlation.ipynb
@@ -43,15 +43,7 @@
    "execution_count": 1,
    "id": "2fc39b7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No conda env active, defaulting to base\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# File Handling\n",
     "import os\n",
@@ -65,7 +57,10 @@
     "import xas as xfcts\n",
     "import plot as pfcts\n",
     "import process\n",
-    "import experiment as exp"
+    "import experiment as exp\n",
+    "\n",
+    "# Plot Handling\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -2171,7 +2166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
