Added QXAS workflow
Added QXAS workflow

Improved calibration function (to be included in general workflow later)

test bed added to try out merging of transient data

--- a/notebooks/2.2 Example - Experiment Class -  XAS-Process Stream Correlation.ipynb
+++ b/notebooks/2.2 Example - Experiment Class -  XAS-Process Stream Correlation.ipynb
@@ -133,7 +133,7 @@
    "source": [
     "## Step 4. Add Process Data to Experiment \n",
     "\n",
-    "    Note: Additiona datastreams will need their own functions. Please reach otu with questions."
+    "    Note: Additiona datastreams will need their own functions. Please reach out with questions."
    ]
   },
   {
