Added Spectra Removal
added to example 3.0 for funny sized data sets

--- a/notebooks/3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter Definitions.ipynb
+++ b/notebooks/3.0 Example - Experiment Class - QEXAFS Data Processing - Parameter Definitions.ipynb
@@ -204,9 +204,13 @@
    "source": [
     "## Step 5. Clean up Data\n",
     "\n",
-    "    If spectra were collected using CXAS or QXAS there is a chance that the raw data may need cleaning up to remove duplicate data poins or nan/inf values.\n",
+    "#### STILL IN DEVELOPMENT\n",
+    "    If spectra were collected using CXAS or QXAS there is a chance that the raw data may need cleaning up to remove\n",
+    "    duplicate data points or nan/inf values.\n",
     "    \n",
-    "#### STILL IN DEVELOPMENT"
+    "    for QXAS, data parsing may result in short/long data sets that need to be removed prior to further processing.\n",
+    "    \n",
+    "### 5a. Remove duplicate points, NaN/inf values, and Zero values"
    ]
   },
   {
@@ -228,6 +232,36 @@
    "source": [
     "my_exp.organize_RawData(remove_duplicates=True, remove_nan_inf=False, remove_zeros=False) \n",
     "# remove_nan_inf & remove_zeros does not work yet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e36d245b",
+   "metadata": {},
+   "source": [
+    "### 5b. Remove short/long data sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "532db01b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Determine and summarize the short/long data sets\n",
+    "bad_spectra = my_exp.data_length_screen(deviations = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2a9297c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the bad spectra from the dataset\n",
+    "my_exp.remove_bad_spectra(bad_spectra['Filename'])"
    ]
   },
   {
